WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.1-dev, 2013-02-12


Version 0.4.1 (under dev!)
--------------------------

* core: add signal "window_opened" (task #12464)
* core: fix structures before buffer data when a buffer is closed
* core: fix refresh of line after changes with hdata_update (update flag
  "displayed" according to filters)
* core: fix detection of python on Ubuntu Raring
* core: fix hidden lines for messages without date when option
  weechat.history.max_buffer_lines_minutes is set (bug #38197)
* core: use default hash/comparison callback for keys of type
  integer/pointer/time in hashtable
* aspell: add completion "aspell_dicts" (list of aspell installed dictionaries)
* aspell: add info "aspell_dict" (dictionaries used on a buffer)
* aspell: optimization on spellers to improve speed (save state by buffer)
* guile: fix compilation with guile 2.0
* irc: add color in output of /names when result is on server buffer (channel
  not joined) (bug #38070)
* perl: simplify code to load scripts
* relay: add websocket server support (RFC 6455) for irc and weechat protocols,
  new option relay.network.websocket_allowed_origins
* relay: add options "buffers" and "upgrade" for commands sync/desync in weechat
  protocol
* relay: fix commands sync/desync in weechat protocol (bug #38215)
* scripts: do not allow empty script name in function "register"

Version 0.4.0 (2013-01-20)
--------------------------

* core: fix infinite loop when a regex gives an empty match (bug #38112)
* core: fix detection of guile in configure
* core: fix click in item "buffer_nicklist" when nicklist is a root bar
  (bug #38080)
* core: fix line returned when clicking on a bar (according to position and
  filling) (bug #38069)
* core: fix refresh of bars when applying layout (bug #37944, bug #37952)
* core: add buffer pointer in arguments for signals "input_search",
  "input_text_changed" and "input_text_cursor_moved"