@@ -49,10 +49,11 @@ FIND_LIBRARY(ICONV_LIBRARY
 IF(ICONV_INCLUDE_PATH)
   IF(ICONV_LIBRARY)
     STRING(REGEX REPLACE "/[^/]*$" "" ICONV_LIB_PATH "${ICONV_LIBRARY}")
-    CHECK_LIBRARY_EXISTS(iconv libiconv_open ${ICONV_LIB_PATH} ICONV_FOUND)
-    IF(NOT ICONV_FOUND)
-      CHECK_LIBRARY_EXISTS(iconv iconv_open ${ICONV_LIB_PATH} ICONV_FOUND)
-    ENDIF(NOT ICONV_FOUND)
+    CHECK_LIBRARY_EXISTS(iconv libiconv_open ${ICONV_LIB_PATH} LIBICONV_OPEN_FOUND)
+    CHECK_LIBRARY_EXISTS(iconv iconv_open ${ICONV_LIB_PATH} ICONV_OPEN_FOUND)
+    IF(LIBICONV_OPEN_FOUND OR ICONV_OPEN_FOUND)
+       SET(ICONV_FOUND TRUE)
+    ENDIF(LIBICONV_OPEN_FOUND OR ICONV_OPEN_FOUND)
   ELSE(ICONV_LIBRARY)
     CHECK_FUNCTION_EXISTS(iconv_open ICONV_FOUND)
   ENDIF(ICONV_LIBRARY)
